<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/sensor_panel"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:background="@drawable/qly_shape_device_round_rect_background"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/sensor_container"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/qly_anim_sensor_blink" >

		    <ImageView
		        android:id="@+id/sensor_type_image"
		        android:layout_width="wrap_content"
		        android:layout_height="48dp"
		        android:contentDescription="@string/img_desc"
		        android:src="@drawable/qly_icon_unknown_sensor" />

        </LinearLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
	        <LinearLayout
	            android:layout_marginLeft="4dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	            
	            <TextView
	                android:id="@+id/device_type_name"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#666666" />
	            
	            <LinearLayout
	                android:layout_marginTop="5dp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal" >
	
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textColor="#666666"
		                android:text="@string/dev_nick_name" />
	
		            <TextView
		                android:id="@+id/device_alias_name"
		                android:layout_width="100dp"
		                android:layout_height="wrap_content"
		                android:singleLine="true"
		                android:ellipsize="middle"
		                android:textColor="#585858" />

	            </LinearLayout>
	
	            <LinearLayout
	                android:layout_marginTop="5dp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal" >
	            
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textColor="#666666"
		                android:text="@string/gate_sn_name" />
		            
		            <TextView
		                android:id="@+id/gate_sn"
		                android:layout_width="80dp"
		                android:layout_height="wrap_content"		                
		                 />
		            
		        </LinearLayout>
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:layout_alignParentRight="true" >
	            
	          
	            
	            <Button
	                android:id="@+id/btn_discovery_device"
	                android:layout_width="66dp"
	                android:layout_height="28dp"
	                android:background="@drawable/qly_selector_view_camera_background"
	                android:textColor="#FCFCFC"
	                android:textSize="15sp"
	                android:text="@string/discovery_device"
	                 />
	            
	            <Button
	                android:id="@+id/btn_factory_gate"
	                android:layout_marginTop="20dp"
	                android:layout_width="66dp"
	                android:layout_height="28dp"
	                android:background="@drawable/qly_selector_view_camera_background"
	                android:textColor="#FCFCFC"
	                android:textSize="15sp"
	                android:text="@string/factory_gate"
	                 />
	            
	            
	        </LinearLayout>
	        
	        <ImageView
	            android:id="@+id/device_abnor_mark"
	            android:layout_marginLeft="44dp"
	            android:layout_width="wrap_content"
	            android:layout_height="60dp"
	            android:layout_centerVertical="true"
	            android:contentDescription="@string/img_desc"
	            android:src="@drawable/qly_icon_device_abnor"
	            android:visibility="invisible" />
        
	    </RelativeLayout>
	    
    </LinearLayout>
    
</LinearLayout>
